# educk-rs

./: .dockerignore  Cargo.toml  Dockerfile  README.md  docker-compose.yaml
.github/workflows/: build.yml
src/: main.rs  server.rs
src/entsoe/: analysis.rs  areas.rs  mod.rs
templates/: plot.html
