[package]
name = "educk-rs"
version = "0.1.0"
edition = "2024"

[dependencies]
reqwest = "0.13.1"
anyhow = "1.0.100"
serde = { version = "1.0.228", features = ["derive"] }
thiserror = "2.0.17"
tokio = { version = "1.49.0", features = ["full"] }
quick-xml = { version = "0.38", features = ["serialize"] }
chrono = "0.4"
plotly = "0.13.5"
