[package]
name = "educk-rs"
version = "0.1.0"
edition = "2024"

[dependencies]
reqwest = "0.13.1"
anyhow = "1.0.100"
serde = { version = "1.0.228", features = ["derive"] }
thiserror = "2.0.17"
tokio = { version = "1.49.0", features = ["full"] }
quick-xml = { version = "0.38", features = ["serialize"] }
chrono = "0.4"
plotly = "0.13.5"
axum = "0.8.8"
http = "1.4.0"
tower-http = { version = "0.6.8", features = ["cors"] }
tracing-subscriber = "0.3.22"
once_cell = "1.21.3"
serde_json = "1.0"
askama = "0.15.1"